--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
     <h2 class="section-title">Makalah Sejarah Pertempuran 10 Nopember dan Teori Kematian Brigadir Jenderal Mallaby</h2>
     <div class="makalah-content">
       <div style="width: 100%; height: 500px; margin-bottom: 20px;">
-        <iframe src="c:\Users\Hype\Downloads\Resume Sejaraah (3).pdf" width="100%" height="100%" style="border: none;"
+        <iframe src="file:///C:/Users/Hype/Downloads/Resume%20Sejaraah%20(3).pdf" width="100%" height="100%" style="border: none;"
           allow="autoplay"></iframe>
       </div>
       <div class="content-desc" style="text-align: center;">
         <p>Silakan baca dokumen di atas untuk informasi lebih mendalam.</p>
-        <a href="c:\Users\Hype\Downloads\Resume Sejaraah (3).pdf" target="_blank" class="btn-cta"
+        <a href="file:///C:/Users/Hype/Downloads/Resume%20Sejaraah%20(3).pdf" target="_blank" class="btn-cta"
           style="display: inline-block; margin-top: 15px;">Lihat / Unduh PDF</a>
       </div>
     </div>
@@ -156,5 +156,6 @@
   </footer>
 
 </body>
+
 
 </html>
